force-app/main/default/objects/Async_Operation_Log__c/fields/BRR_Name__c.field-meta.xml
<CustomField>
    <fullName>BRR_Name__c</fullName>
    <label>BRR Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queueable</fullName>
            </value>
            <value>
                <fullName>Batch</fullName>
            </value>
            <value>
                <fullName>Flow</fullName>
            </value>
            <value>
                <fullName>Future</fullName>
            </value>
            <value>
                <fullName>Integration</fullName>
            </value>
            <value>
                <fullName>API</fullName>
            </value>
            <value>
                <fullName>AI</fullName>
            </value>
            <value>
                <fullName>Scheduler</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>