force-app/main/default/objects/Async_Operation_Log__c/fields/Error_Stack__c.field-meta.xml
<CustomField>
    <fullName>Error_Stack__c</fullName>
    <label>Error Stack</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>