force-app/main/default/objects/Async_Operation_Log__c/fields/Test_Verification__c.field-meta.xml
<CustomField>
    <fullName>Test_Verification__c</fullName>
    <description>A test field to verify deployment flow.</description>
    <label>Test Verification</label>
    <length>255</length>
    <type>Text</type>
</CustomField>