force-app/main/default/objects/Async_Operation_Log__c/fields/Tracking_Id__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Id__c</fullName>
    <label>Tracking Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>